--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -54,9 +54,11 @@ jobs:
 
       - name: Commit for build
         run : |
-         git add build/app/outputs/flutter-apk/app-release.apk
-         git commit -m "Build"
-         git push
+           git config user.email "alejordi23@gmail.com"
+           git config  user.name "Alex3723"
+           git add build/app/outputs/flutter-apk/app-release.apk
+           git commit -m "Build"
+           git push
 
 
 
