--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,12 @@
-version: '3.8'
 
 services:
   flutter-app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: flutter_app_container
-    ports:
-      - "8090:80"
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx_container
     ports:
       - "8080:80"
     volumes:
-      - ./build/web:/usr/share/nginx/html
-    depends_on:
-      - flutter-app
-
-volumes:
-  flutter-web:
+      - .:/app
+    environment:
+      - FLUTTER_STORAGE_BASE_URL=https://storage.googleapis.com
